--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "axios": "^1.7.7",
     "formik": "^2.4.6",
+    "framer-motion": "^11.11.11",
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.3.0",
     "yup": "^1.4.0"
   },
   "devDependencies": {
